--- a/docs/codepages/lendingclub/index.ipynb
+++ b/docs/codepages/lendingclub/index.ipynb
@@ -22,13 +22,20 @@
         "\n",
         "## Primary Libraries"
       ],
-      "id": "7acb6b02-8afb-4422-9c91-b0282bdb226d"
+      "id": "7ddeb198-b2a7-4bae-9b57-492ba706d1a4"
     },
     {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {},
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /Users/macpc/.kaggle/kaggle.json'"
+          ]
+        },
         {
           "output_type": "display_data",
           "metadata": {},
@@ -52,7 +59,7 @@
         "first_13_cols = loandata.iloc[:, :13]\n",
         "first_13_cols.head()"
       ],
-      "id": "01d88dc8"
+      "id": "85657c9a"
     },
     {
       "cell_type": "code",
@@ -74,7 +81,7 @@
         "second_13_cols = loandata.iloc[:, 13:]\n",
         "second_13_cols.head()"
       ],
-      "id": "ab3d59c7"
+      "id": "5c74f24d"
     },
     {
       "cell_type": "markdown",
@@ -84,7 +91,7 @@
         "\n",
         "### Descriptive Statistics"
       ],
-      "id": "c9379e87-2f83-428e-a261-87840c58b644"
+      "id": "8847ee9a-73a0-49dd-880c-d1b40b7bb992"
     },
     {
       "cell_type": "code",
@@ -135,7 +142,7 @@
       "source": [
         "loandata.info()"
       ],
-      "id": "0cc1ef4c"
+      "id": "6d2f6a77"
     },
     {
       "cell_type": "code",
@@ -153,7 +160,7 @@
       "source": [
         "sns.heatmap(loandata.isnull(), yticklabels=False, cbar=False, cmap='viridis')"
       ],
-      "id": "2599882b"
+      "id": "d8092571"
     },
     {
       "cell_type": "raw",
@@ -163,7 +170,7 @@
       "source": [
         "<p style=\"text-align: justify\">"
       ],
-      "id": "be2a7036-98df-49ca-a234-5770505885c8"
+      "id": "6f7d39fd-9695-45f5-9f2c-59c029f24c72"
     },
     {
       "cell_type": "markdown",
@@ -178,7 +185,7 @@
         "insignificantly missing or doesn’t seem to be very strongly related to\n",
         "the predictive/dependent variable."
       ],
-      "id": "565eefbe-43f4-49bd-ae6b-9116f237d80c"
+      "id": "8822c074-fc24-42ba-bb18-a889a9e16da2"
     },
     {
       "cell_type": "raw",
@@ -188,7 +195,7 @@
       "source": [
         "</p >"
       ],
-      "id": "43bc80f7-7cd2-4d51-9580-3e0753a9a341"
+      "id": "bd9f1183-ceb1-44d6-a35a-1db761c05e36"
     },
     {
       "cell_type": "code",
@@ -209,7 +216,7 @@
       "source": [
         "loandata.describe().T"
       ],
-      "id": "c2c1a6da"
+      "id": "5e877fa0"
     },
     {
       "cell_type": "markdown",
@@ -221,7 +228,7 @@
         "\n",
         "First, let’s look at the class balance in the dependent variable"
       ],
-      "id": "f9087d34-6e0e-4436-8f80-3e9ae5900fbf"
+      "id": "9f2c33bf-b6f9-4271-8656-0ab9cc3f422b"
     },
     {
       "cell_type": "code",
@@ -247,7 +254,7 @@
         "    len(loandata)*100, 2\n",
         ")"
       ],
-      "id": "43f57a6b"
+      "id": "0252d17c"
     },
     {
       "cell_type": "markdown",
@@ -256,7 +263,7 @@
         "So, 80.39$\\%$ are `Fully Paid` category where as 19.61$\\%$ is labeled as\n",
         "`Charged Off` or defaulter."
       ],
-      "id": "08e33234-7149-42fe-8856-38961c2a4d69"
+      "id": "0141c2f7-c519-416d-9cf6-7d68a3e48b66"
     },
     {
       "cell_type": "raw",
@@ -266,7 +273,7 @@
       "source": [
         "<p style=\"text-align: justify\">"
       ],
-      "id": "db3e1046-2dcc-43cb-ba49-a7211e8290cb"
+      "id": "4dfa8186-e686-4f1d-aeb8-abf14ad91659"
     },
     {
       "cell_type": "markdown",
@@ -283,7 +290,7 @@
         "datasets(such as XGBoost or balanced random forests) could be effective\n",
         "ways to address this imbalance in the predictive modeling process."
       ],
-      "id": "8969faab-11dc-4bea-b851-aa874a9daf73"
+      "id": "aafd001e-035b-467b-b44a-08d900bf1404"
     },
     {
       "cell_type": "raw",
@@ -293,7 +300,7 @@
       "source": [
         "</p>"
       ],
-      "id": "5aacb297-9de1-4c5e-acd8-fc1317175e46"
+      "id": "16c26e32-5ea8-41bd-9c28-475f8311d133"
     },
     {
       "cell_type": "markdown",
@@ -303,7 +310,7 @@
         "\n",
         "Next, let’s see how the features interacts with the dependent variable"
       ],
-      "id": "529220a1-5961-4f61-a9ef-27bf2178b71f"
+      "id": "9e09e971-d3dd-43aa-8257-aaeaec6e2dee"
     },
     {
       "cell_type": "code",
@@ -346,7 +353,7 @@
         "ax2.set_xlabel('Installment')\n",
         "ax2.legend()"
       ],
-      "id": "0bc41d07"
+      "id": "fb089560"
     },
     {
       "cell_type": "markdown",
@@ -356,7 +363,7 @@
         "How about their mean, upper quartile, lower quartile based on\n",
         "`loan_status`?"
       ],
-      "id": "b1bf654e-68e5-405f-ab94-5402294ddf0c"
+      "id": "c0261b86-bfda-4ed5-b6f6-d36a4c571772"
     },
     {
       "cell_type": "code",
@@ -396,7 +403,7 @@
         ")\n",
         "ax2.set_title('Installment Boxplot')"
       ],
-      "id": "2a4fe8ee"
+      "id": "fca606c7"
     },
     {
       "cell_type": "markdown",
@@ -408,7 +415,7 @@
         "\n",
         "#### Term, Grade, and Sub-grade Interaction With Loan Status"
       ],
-      "id": "2e47387f-55bf-4da3-baa8-77e31fdab0d7"
+      "id": "9b483b62-559e-44a9-a3cf-4bd1278254e5"
     },
     {
       "cell_type": "code",
@@ -438,7 +445,7 @@
         "    palette='winter', ax=ax2\n",
         ")"
       ],
-      "id": "31fbc984"
+      "id": "3bd09ceb"
     },
     {
       "cell_type": "code",
@@ -457,7 +464,7 @@
         "fig, ax = plt.subplots(figsize=(10, 5))\n",
         "sns.histplot(x='sub_grade', hue='loan_status', data=loandata, ax=ax)"
       ],
-      "id": "168cc4b2"
+      "id": "cb36a6b2"
     },
     {
       "cell_type": "markdown",
@@ -465,7 +472,7 @@
       "source": [
         "#### Employment Title and Employment Length"
       ],
-      "id": "edb4a6bd-d4c5-4014-bf02-5ebb039e88af"
+      "id": "47f32309-8cf0-452b-8735-a8029019e171"
     },
     {
       "cell_type": "code",
@@ -512,7 +519,7 @@
         "loandata['emp_title'] = loandata['emp_title'].str.lower()\n",
         "loandata.emp_title.value_counts()[:25]"
       ],
-      "id": "7e2ed9cb"
+      "id": "f63f0c90"
     },
     {
       "cell_type": "markdown",
@@ -520,7 +527,7 @@
       "source": [
         "Let’s work with the employment length column"
       ],
-      "id": "a9065406-c72f-4caa-8919-8bcd42a7fb2d"
+      "id": "eba98b06-6e67-4a65-9c62-1ad7f494febf"
     },
     {
       "cell_type": "code",
@@ -531,7 +538,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/var/folders/53/8y5n2fl55p3g3r5_pk9yfwk40000gn/T/ipykernel_70418/3832649202.py:1: FutureWarning:\n",
+            "/var/folders/53/8y5n2fl55p3g3r5_pk9yfwk40000gn/T/ipykernel_91641/3832649202.py:1: FutureWarning:\n",
             "\n",
             "Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n"
           ]
@@ -574,7 +581,7 @@
         "    stat='count'\n",
         ")"
       ],
-      "id": "d4414887"
+      "id": "fa7d0133"
     },
     {
       "cell_type": "raw",
@@ -584,7 +591,7 @@
       "source": [
         "<p style=\"text-align: justify\">"
       ],
-      "id": "09bb492b-dcd3-4a1f-9c8c-fa53b172b49a"
+      "id": "64d8bb67-7f6e-4819-9b05-652c582a108f"
     },
     {
       "cell_type": "markdown",
@@ -596,7 +603,7 @@
         "Therefore, it may not be very useful when we may think of data\n",
         "imputation for the missing values."
       ],
-      "id": "84939c1c-e7fb-4524-809f-9c1c05b87055"
+      "id": "25f61d24-70aa-4307-b572-9a7349d7a044"
     },
     {
       "cell_type": "raw",
@@ -606,7 +613,7 @@
       "source": [
         "</p >"
       ],
-      "id": "74f8d5f9-6610-46e9-80fb-fcbae5008853"
+      "id": "d040d93c-1dba-45ca-a6d7-9c7219aa4f23"
     },
     {
       "cell_type": "markdown",
@@ -614,7 +621,7 @@
       "source": [
         "#### Home Ownership and Annual Income"
       ],
-      "id": "9a0074fa-46d0-4675-a294-00f25a061dca"
+      "id": "61398d78-b120-46e3-89ef-2769813f419b"
     },
     {
       "cell_type": "code",
@@ -647,7 +654,7 @@
         "    data=loandata, ax=ax2\n",
         ")"
       ],
-      "id": "0b3092cb"
+      "id": "bcb66706"
     },
     {
       "cell_type": "markdown",
@@ -659,7 +666,7 @@
         "\n",
         "#### Issue Date and Verification Status"
       ],
-      "id": "4eca6289-952e-427d-afda-60ac8bb1e072"
+      "id": "2b40ab28-f6ea-4b05-8ca0-08cf24931ef9"
     },
     {
       "cell_type": "code",
@@ -698,7 +705,7 @@
         "    data=loandata, palette='winter', ax=ax2\n",
         ")"
       ],
-      "id": "b601bbcf"
+      "id": "63305e11"
     },
     {
       "cell_type": "raw",
@@ -708,7 +715,7 @@
       "source": [
         "<p style=\"text-align: justify\">"
       ],
-      "id": "ad647fa8-8241-4241-aef3-c50dadb1232a"
+      "id": "fcebc71f-f5b4-46b7-9b90-dbb63cfab8e5"
     },
     {
       "cell_type": "markdown",
@@ -719,7 +726,7 @@
         "pick in in 2015. For the verification status, we can see the less\n",
         "charged off incidents when the source was not varified."
       ],
-      "id": "7c1de742-6e9a-4c0f-8115-7bfa40db0e9c"
+      "id": "975f44fe-04b6-4f71-9a3a-4bb89e37e016"
     },
     {
       "cell_type": "raw",
@@ -729,7 +736,7 @@
       "source": [
         "</p>"
       ],
-      "id": "b1c4a0f9-9282-43be-bf68-4494d727d161"
+      "id": "517a447a-7997-4a7c-8fc8-5123c7571248"
     },
     {
       "cell_type": "markdown",
@@ -737,7 +744,7 @@
       "source": [
         "#### Purpose and Debt-to-Income Ratio"
       ],
-      "id": "081ee387-0691-4085-8971-e7681d36492a"
+      "id": "f10fec77-867f-4272-bf29-7559a14a2fc8"
     },
     {
       "cell_type": "code",
@@ -782,7 +789,7 @@
         ")\n",
         "ax2.set_title('Debt-to-Income Ratio on Loan Status')"
       ],
-      "id": "5c9adc24"
+      "id": "72df694d"
     },
     {
       "cell_type": "raw",
@@ -792,7 +799,7 @@
       "source": [
         "<p style=\"text-align: justify\">"
       ],
-      "id": "05163ba6-6da2-40c8-98d5-197f6cf4dcb8"
+      "id": "474867e0-08f4-4ef1-8c72-50471d84bed9"
     },
     {
       "cell_type": "markdown",
@@ -804,7 +811,7 @@
         "charged off. Another insight we obtain from the debt-to-income ratio is\n",
         "that the charged off loans have higher dti ratio"
       ],
-      "id": "58380dec-52c5-42e3-a42b-103654174a5f"
+      "id": "1c5a1fd5-a45c-4b0d-b5ab-e971cc9e23e6"
     },
     {
       "cell_type": "raw",
@@ -814,7 +821,7 @@
       "source": [
         "</p>"
       ],
-      "id": "cd555cb7-d340-457b-9db6-ed938de931d6"
+      "id": "c36f33c9-646a-465a-8a67-45bf4545c57f"
     },
     {
       "cell_type": "markdown",
@@ -822,7 +829,7 @@
       "source": [
         "#### Number of Credit Accounts and Number of Public Records"
       ],
-      "id": "8edb9d13-af68-4378-87fd-8d2559acdec6"
+      "id": "7fefc795-0262-4a4c-90ad-c745387d5076"
     },
     {
       "cell_type": "code",
@@ -870,7 +877,7 @@
         "ax2.set_xlabel('Public Records')\n",
         "ax2.set_xticklabels(ax2.get_xticklabels(), rotation=0)"
       ],
-      "id": "78529431"
+      "id": "8bdd6910"
     },
     {
       "cell_type": "code",
@@ -892,7 +899,7 @@
         "    data=filtered_open_account\n",
         ")"
       ],
-      "id": "096da9c7"
+      "id": "69f060d4"
     },
     {
       "cell_type": "raw",
@@ -902,7 +909,7 @@
       "source": [
         "<p style=\"text-align: justify\">"
       ],
-      "id": "829c33e7-ba3f-4295-85d2-3f89df51e27a"
+      "id": "840de73e-bf66-4712-8c35-c73734e2672b"
     },
     {
       "cell_type": "markdown",
@@ -915,7 +922,7 @@
         "loan being charged off. Also, people who doesn’t have any public record\n",
         "seems to have higher chance of loan status being charged off"
       ],
-      "id": "98cef149-9909-4f11-ad55-d88398bf25ce"
+      "id": "b9c24a07-6897-4a44-82ff-43ae54fe2fc7"
     },
     {
       "cell_type": "raw",
@@ -925,7 +932,7 @@
       "source": [
         "</p>"
       ],
-      "id": "99f525ea-da10-4621-8e2b-aa9e177cadc4"
+      "id": "8805a80e-68fb-4d92-80d1-56dba07aa58c"
     },
     {
       "cell_type": "markdown",
@@ -933,7 +940,7 @@
       "source": [
         "#### Revolving Balance and Utilization"
       ],
-      "id": "0062f528-dd30-4452-9d02-290266c12102"
+      "id": "b39d7b7a-de4b-4610-b53b-0aef01ec68e3"
     },
     {
       "cell_type": "code",
@@ -983,7 +990,7 @@
         "ax2.set_ylabel('Revolving Utilization')\n",
         "ax2.set_title('Revolving Utilization vs Loan Status')"
       ],
-      "id": "d2a8a468"
+      "id": "7818bf4c"
     },
     {
       "cell_type": "raw",
@@ -993,7 +1000,7 @@
       "source": [
         "<p style=\"text-align:justify\">"
       ],
-      "id": "33b4f223-edbf-410c-af5b-c65a8b96b483"
+      "id": "be02d7dc-412b-4aeb-8d34-62622187959f"
     },
     {
       "cell_type": "markdown",
@@ -1004,7 +1011,7 @@
         "however, for revolving utilization, it’s higher for the charged off\n",
         "category."
       ],
-      "id": "5204daf8-81f6-4143-afb8-de03605df694"
+      "id": "3fb8c10e-040c-40cb-b083-266cbcab9c9e"
     },
     {
       "cell_type": "raw",
@@ -1014,7 +1021,7 @@
       "source": [
         "</p>"
       ],
-      "id": "5a8885a9-a9a9-4cc5-adfc-7765b337940f"
+      "id": "f71f6d1f-cab5-4cb2-8bc2-6b3445c2ad30"
     },
     {
       "cell_type": "markdown",
@@ -1022,7 +1029,7 @@
       "source": [
         "#### Total Account and Initial List Status"
       ],
-      "id": "61d840d2-d024-4cb5-bf98-962ed1f708f7"
+      "id": "a9686bbc-546d-463a-87a5-5a911eb9cd3b"
     },
     {
       "cell_type": "code",
@@ -1071,7 +1078,7 @@
         "ax2.set_title('Initial Status and Loan Status')\n",
         "ax2.set_xlabel('Initial Status (Funded or Withdrawn)')"
       ],
-      "id": "2a5d4add"
+      "id": "a04fa246"
     },
     {
       "cell_type": "markdown",
@@ -1079,7 +1086,7 @@
       "source": [
         "next,"
       ],
-      "id": "955480d4-b1d8-449e-bb6a-aee400b4a355"
+      "id": "7adf12e5-a707-4a67-be9b-d791b5d2dd82"
     },
     {
       "cell_type": "code",
@@ -1101,7 +1108,7 @@
         "    data=filtered_total_account\n",
         ")"
       ],
-      "id": "9f283df3"
+      "id": "e910a406"
     },
     {
       "cell_type": "raw",
@@ -1111,7 +1118,7 @@
       "source": [
         "<p style=\"text-align: justify\">"
       ],
-      "id": "bd66533f-4fe7-40e5-8cde-6d5728df3c40"
+      "id": "4978ec24-844f-4ed9-898a-296981c4eb39"
     },
     {
       "cell_type": "markdown",
@@ -1121,7 +1128,7 @@
         "on loan status based on the plottings above. Similarly, Initial Loan\n",
         "Status also doesn’t give much information."
       ],
-      "id": "00e00848-a744-4d9f-a654-f36ce225858f"
+      "id": "146e873a-3a31-4896-8785-7fd79bfa133d"
     },
     {
       "cell_type": "raw",
@@ -1131,7 +1138,7 @@
       "source": [
         "</p>"
       ],
-      "id": "9d96daf1-8d4f-499c-b317-dd0d414aed27"
+      "id": "a8f63c81-87d9-443e-b209-e554c292cee7"
     },
     {
       "cell_type": "markdown",
@@ -1139,7 +1146,7 @@
       "source": [
         "#### Number of Mortgage Account and Number of Public Record of Bankruptcies"
       ],
-      "id": "3f21ecd1-eb1e-430a-aaa0-0581cbe37af0"
+      "id": "326b7b94-f237-4516-82b5-d64a8ec2a1bb"
     },
     {
       "cell_type": "code",
@@ -1201,7 +1208,7 @@
         "ax2.legend(title='Loan Status')\n",
         "plt.show()"
       ],
-      "id": "e1bfefc2"
+      "id": "58390f80"
     },
     {
       "cell_type": "markdown",
@@ -1213,7 +1220,7 @@
         "\n",
         "#### Application Type"
       ],
-      "id": "048500ca-e39b-4895-94b2-9fc7f11a233a"
+      "id": "804998fd-d535-41af-869a-920c54182a92"
     },
     {
       "cell_type": "code",
@@ -1234,7 +1241,7 @@
         "    data=loandata, palette='winter'\n",
         ")"
       ],
-      "id": "a5f2eea6"
+      "id": "dd9904b4"
     },
     {
       "cell_type": "markdown",
@@ -1246,7 +1253,7 @@
         "Now that we have analyzed all the features, how about the correlations\n",
         "among the features?"
       ],
-      "id": "3d4f62ee-c75c-48b3-80bc-a06502d985b2"
+      "id": "8fcdf55e-a3be-4979-ae37-4cfc4831455e"
     },
     {
       "cell_type": "code",
@@ -1267,7 +1274,7 @@
         "sns.heatmap(numeric_loandata.corr(), annot=True, cmap='coolwarm', vmin=-1, vmax=1)\n",
         "plt.show()"
       ],
-      "id": "3cdc40bb"
+      "id": "c1275a63"
     },
     {
       "cell_type": "markdown",
@@ -1275,7 +1282,7 @@
       "source": [
         "### Conclusion"
       ],
-      "id": "dcc90ffd-61ca-4e07-86e0-379210a392ed"
+      "id": "ac7764c3-6311-4946-b5de-80f67adb57eb"
     }
   ],
   "nbformat": 4,
@@ -1286,6 +1293,18 @@
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
       "path": "/Users/macpc/Library/CloudStorage/OneDrive-FloridaStateUniversity/OnlineLearning/python_environments/pytorch-env/share/jupyter/kernels/python3"
+    },
+    "language_info": {
+      "name": "python",
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": "3"
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.7"
     }
   }
 }
