--- a/docs/dsandml/multiplelinreg/index.ipynb
+++ b/docs/dsandml/multiplelinreg/index.ipynb
@@ -40,7 +40,7 @@
         "\n",
         "## Ordinary Least Square Method"
       ],
-      "id": "08f21864-d25e-43da-9fba-b5df56a4f70c"
+      "id": "a2022681-9f7f-4df1-894b-6d268946502a"
     },
     {
       "cell_type": "raw",
@@ -50,7 +50,7 @@
       "source": [
         "<p style=\"text-align: justify\">"
       ],
-      "id": "5c73b235-8b54-41e5-8681-d3aa388c4c53"
+      "id": "c960d3fe-b5b5-44ad-a015-1db59e974280"
     },
     {
       "cell_type": "markdown",
@@ -63,7 +63,7 @@
         "`scikit-learn` uses another method called ***Stochastic Gradient\n",
         "Descent*** for optimization which is discussed in the next section."
       ],
-      "id": "47dbe8b4-0918-4639-ae49-e049a00e3f9d"
+      "id": "dd4db71d-e1a9-4d59-b492-31a9a9e0de8b"
     },
     {
       "cell_type": "raw",
@@ -73,7 +73,7 @@
       "source": [
         "</p>"
       ],
-      "id": "d1e3d63c-d64b-4e5f-8390-9d64b0275f49"
+      "id": "fbd377fe-9ac5-46e2-97b7-1c0259ee71c5"
     },
     {
       "cell_type": "markdown",
@@ -124,7 +124,7 @@
         "\\beta = (X^T X)^{-1} X^T y\n",
         "$$"
       ],
-      "id": "40cd039a-9912-4c33-b065-7d4a88567cb2"
+      "id": "3fffc64d-e206-4c01-8577-5047f86d4985"
     },
     {
       "cell_type": "raw",
@@ -134,7 +134,7 @@
       "source": [
         "<p style=\"text-align: justify\">"
       ],
-      "id": "5f5b5f15-7288-4146-8bdd-da62d67048d3"
+      "id": "970fb01e-4e22-4c3f-a0a1-e8a337aafa24"
     },
     {
       "cell_type": "markdown",
@@ -149,7 +149,7 @@
         "become computationally expensive for very large datasets due to the\n",
         "inversion of the matrix $X^TX$."
       ],
-      "id": "df8a4574-4f5c-4a4a-a2da-882416730f5d"
+      "id": "015f6422-f159-4371-bd39-0b3bcde7a30e"
     },
     {
       "cell_type": "raw",
@@ -159,7 +159,7 @@
       "source": [
         "</p>"
       ],
-      "id": "cf26f937-28e4-4e3e-b921-48110c7845ba"
+      "id": "a58b5de3-6759-44ca-bfc9-e73c23710e4d"
     },
     {
       "cell_type": "markdown",
@@ -169,7 +169,7 @@
         "\n",
         "### Gradient Descent"
       ],
-      "id": "64170580-9dec-4e32-831e-c1e764cc6d90"
+      "id": "f4a8c815-fd08-4195-b8b5-ac6005be2720"
     },
     {
       "cell_type": "raw",
@@ -179,7 +179,7 @@
       "source": [
         "<p style=\"text-align: justify\">"
       ],
-      "id": "6e39ac25-c27d-4931-9f0a-0580ea908d1d"
+      "id": "5a417949-2ff5-4584-8bec-97163f04731e"
     },
     {
       "cell_type": "markdown",
@@ -197,7 +197,7 @@
         "can approximate $f(\\beta)$ using Taylor series expansion  \n",
         "$$f(\\beta_{k+1})=f(\\beta_k +\\Delta\\beta_k)\\approx f(\\beta_k)+\\nabla f(\\beta_k)^T \\Delta \\beta_k+\\text{higher-order terms}$$"
       ],
-      "id": "59c3ad5c-0cc7-4321-b809-166506fcd85f"
+      "id": "534bb49e-0b10-44e2-9494-67e97f5f6ae1"
     },
     {
       "cell_type": "raw",
@@ -207,7 +207,7 @@
       "source": [
         "</p>"
       ],
-      "id": "011cf866-2386-42d0-96b6-7d6594f13e9d"
+      "id": "e9941852-4ad9-4cb0-a8e1-b7e62db09959"
     },
     {
       "cell_type": "markdown",
@@ -228,7 +228,7 @@
         "-   $\\nabla f(\\beta_k)$ is the gradient of the cost function $f$ with\n",
         "    respect to $\\beta$ at the current point $\\beta_k$."
       ],
-      "id": "fc217aee-4b94-4d4c-82b0-4bea426bd8e5"
+      "id": "7690c73b-8ad9-43bf-a0b2-429614c129be"
     },
     {
       "cell_type": "raw",
@@ -238,7 +238,7 @@
       "source": [
         "<p style=\"text-align: justify\">"
       ],
-      "id": "3a2210f8-9c04-4b7b-80ac-091d9a09ebfb"
+      "id": "94002cfb-d9ed-485a-a5f6-8bc44a481c46"
     },
     {
       "cell_type": "markdown",
@@ -264,7 +264,7 @@
         "\n",
         "### Stochastic Gradient Descent (SGD)"
       ],
-      "id": "530d7b08-d54e-489a-a13d-305eab897b85"
+      "id": "c965645d-f90e-4e16-9b76-28999c4b35d1"
     },
     {
       "cell_type": "raw",
@@ -274,7 +274,7 @@
       "source": [
         "<p style=\"text-align: justify\">"
       ],
-      "id": "97174125-0d4f-4a3c-9a33-22dcc63ae513"
+      "id": "742e24bd-51bf-44e6-b67c-e0289d7e285b"
     },
     {
       "cell_type": "markdown",
@@ -286,7 +286,7 @@
         "of data points at each iteration. The later one we call it mini batch\n",
         "SGD."
       ],
-      "id": "09a03f83-98c9-4c59-ba2a-2167b17bb3f0"
+      "id": "8b56d2b4-328c-44c6-b930-6cd88f36b35e"
     },
     {
       "cell_type": "raw",
@@ -296,7 +296,7 @@
       "source": [
         "</p>"
       ],
-      "id": "c6002a1d-00e8-4744-9df7-e7da42cc5cdb"
+      "id": "11e34ed3-264e-4a2a-afd5-de84527e5720"
     },
     {
       "cell_type": "markdown",
@@ -343,7 +343,7 @@
         "\n",
         "### Synthetic Data"
       ],
-      "id": "9cddb9df-383e-4dd8-a88e-85df2a602cf6"
+      "id": "75114004-37fd-49a6-bbe6-698f3c56fd4c"
     },
     {
       "cell_type": "code",
@@ -356,7 +356,7 @@
         "X=np.random.randn(1000,2)\n",
         "y=3*X[:,0]+2*X[:,1]+1+np.random.randn(1000)"
       ],
-      "id": "6c47396a"
+      "id": "cdc8d809"
     },
     {
       "cell_type": "markdown",
@@ -366,7 +366,7 @@
         "\n",
         "### Fit the data: Using scikit-learn Library"
       ],
-      "id": "adcb0703-e3d3-4bc2-b891-dab75fef9b1e"
+      "id": "eaa2f668-b1c8-4ba9-bd8f-9fbb79829c00"
     },
     {
       "cell_type": "code",
@@ -379,14 +379,14 @@
         "coefficients=mlr.coef_.tolist()\n",
         "slope=mlr.intercept_.tolist()"
       ],
-      "id": "2c722d7c"
+      "id": "39b9314c"
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "So the model parameters: slope $\\beta_0=$ 0.9923 and coefficients\n",
-        "$\\beta_1=$ 2.9891, and $\\beta_2=$ 1.9601\n",
+        "So the model parameters: slope $\\beta_0=$ 1.0353 and coefficients\n",
+        "$\\beta_1=$ 2.9829, and $\\beta_2=$ 2.0123\n",
         "\n",
         "### Fit the data: Using Custom Library OLS\n",
         "\n",
@@ -421,7 +421,7 @@
         "\n",
         "Now it’s time to use the new class"
       ],
-      "id": "399a5690-0f2c-4157-b85b-c78a95c3765e"
+      "id": "4df32e64-5568-4087-9a91-80656771d46c"
     },
     {
       "cell_type": "code",
@@ -435,14 +435,14 @@
         "coefficients1=mlr1.coeff_()\n",
         "slope1=mlr1.interceptt_()"
       ],
-      "id": "f31ce226"
+      "id": "1e50fc77"
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "So the model parameters: slope $\\beta_0=$ 0.9923 and coefficients\n",
-        "$\\beta_1=$ 2.9891, and $\\beta_2=$ 1.9601\n",
+        "So the model parameters: slope $\\beta_0=$ 1.0353 and coefficients\n",
+        "$\\beta_1=$ 2.9829, and $\\beta_2=$ 2.0123\n",
         "\n",
         "### Fit the data: Using Gradient Descent\n",
         "\n",
@@ -483,7 +483,7 @@
         "\n",
         "Now we use this similarly as before,"
       ],
-      "id": "94f551bc-7b1f-4361-87a0-d5dca090b0c1"
+      "id": "6b8b040f-97d8-4dd9-8235-85b3ea4a6de4"
     },
     {
       "cell_type": "code",
@@ -497,14 +497,14 @@
         "coefficients2=mlr2.coefff_()\n",
         "slope2=mlr2.intercepttt_()"
       ],
-      "id": "d0e7caf6"
+      "id": "0837fdc7"
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "So the model parameters: slope $\\beta_0=$ 0.9923 and coefficients\n",
-        "$\\beta_1=$ 2.9884, and $\\beta_2=$ 1.9596\n",
+        "So the model parameters: slope $\\beta_0=$ 1.0356 and coefficients\n",
+        "$\\beta_1=$ 2.9815, and $\\beta_2=$ 2.0115\n",
         "\n",
         "### Fit the data: Using Stochastic Gradient Descent\n",
         "\n",
@@ -575,7 +575,7 @@
         "\n",
         "Now"
       ],
-      "id": "127b0454-7558-4997-aa20-873c40498ea3"
+      "id": "bc489028-2148-4d13-a93c-0dc97b0f79d7"
     },
     {
       "cell_type": "code",
@@ -588,23 +588,65 @@
         "mlr3=SGDLinearRegression(learning_rate=0.01, num_iterations=1000, batch_size=10)\n",
         "theta, _ = mlr3.fit(X, y)"
       ],
-      "id": "0b3bf774"
+      "id": "aeebcaf9"
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "So the model parameters: slope $\\beta_0=$ array(\\[0.94919299\\]) and\n",
-        "coefficients $\\beta_1=$ array(\\[2.96989826\\]), and $\\beta_2=$\n",
-        "array(\\[1.94689133\\])\n",
+        "So the model parameters: slope $\\beta_0=$ array(\\[1.01772816\\]) and\n",
+        "coefficients $\\beta_1=$ array(\\[3.01503486\\]), and $\\beta_2=$\n",
+        "array(\\[2.06061341\\])\n",
         "\n",
         "Up next [knn regression](../../dsandml/knn/index.qmd)\n",
         "\n",
         "------------------------------------------------------------------------\n",
         "\n",
-        "**Share on**"
+        "**Share on**\n",
+        "\n",
+        "<a href=\"https://www.facebook.com/sharer.php?u=https://mrislambd.github.io/dsandml/multiplelinreg/\" target=\"_blank\" style=\"color:#1877F2; text-decoration: none;\">\n",
+        "\n",
+        "</a>\n",
+        "\n",
+        "<a href=\"https://www.linkedin.com/sharing/share-offsite/?url=https://mrislambd.github.io/dsandml/multiplelinreg/\" target=\"_blank\" style=\"color:#0077B5; text-decoration: none;\">\n",
+        "\n",
+        "</a>\n",
+        "\n",
+        "<a href=\"https://www.twitter.com/intent/tweet?url=https://mrislambd.github.io/dsandml/multiplelinreg/\" target=\"_blank\" style=\"color:#1DA1F2; text-decoration: none;\">\n",
+        "\n",
+        "</a>"
       ],
-      "id": "f8f82b7a-75f7-4b54-beea-ec0dfae2c907"
+      "id": "a096b712-9f9e-43d5-bd72-39657179174e"
+    },
+    {
+      "cell_type": "raw",
+      "metadata": {
+        "raw_mimetype": "text/html"
+      },
+      "source": [
+        "<script src=\"https://giscus.app/client.js\"\n",
+        "        data-repo=\"mrislambd/mrislambd.github.io\" \n",
+        "        data-repo-id=\"R_kgDOMV8crA\"\n",
+        "        data-category=\"Announcements\"\n",
+        "        data-category-id=\"DIC_kwDOMV8crM4CjbQW\"\n",
+        "        data-mapping=\"pathname\"\n",
+        "        data-strict=\"0\"\n",
+        "        data-reactions-enabled=\"1\"\n",
+        "        data-emit-metadata=\"0\"\n",
+        "        data-input-position=\"bottom\"\n",
+        "        data-theme=\"light\"\n",
+        "        data-lang=\"en\"\n",
+        "        crossorigin=\"anonymous\"\n",
+        "        async>\n",
+        "</script>"
+      ],
+      "id": "a424e716-7ed3-405f-8514-43faafdb811d"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [],
+      "id": "94f30617-9824-496b-90b2-fafbabb077d9"
     },
     {
       "cell_type": "raw",
@@ -615,28 +657,15 @@
         "<script async defer crossorigin=\"anonymous\"\n",
         " src=\"https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v20.0\"></script>"
       ],
-      "id": "a7e5802d-478c-40f0-853d-73cc06be3065"
+      "id": "f80d8171-f6c9-48c0-a807-4f104d32e310"
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<a target=\"_blank\" \n",
-        " href=\"https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmrislambd.github.io%2Fmachinelearning%2Fmultiplelinreg%2F&amp;src=sdkpreparse\" \n",
-        " class=\"fb-xfbml-parse-ignore\">Share</a>\n",
-        "\n",
-        "<script src=\"https://platform.linkedin.com/in.js\" type=\"text/javascript\">lang: en_US</script>\n",
-        "\n",
-        "<script type=\"IN/Share\" data-url=\"https://mrislambd.github.io/machinelearning/multiplelinreg/\"></script>\n",
-        "\n",
-        "<a href=\"https://twitter.com/share?ref_src=twsrc%5Etfw\" class=\"twitter-share-button\" \n",
-        " data-url=\"https://mrislambd.github.io/machinelearning/multiplelinreg/\" data-show-count=\"true\">Tweet</a>\n",
-        "\n",
-        "<script async src=\"https://platform.twitter.com/widgets.js\" charset=\"utf-8\"></script>\n",
-        "\n",
         "**You may also like**"
       ],
-      "id": "76f118ed-3fca-4ef9-a8b5-0eccf17a7c36"
+      "id": "05e6dfee-296f-43cb-b7b3-df5907e09dc4"
     }
   ],
   "nbformat": 4,
