new course added

--- a/cv.qmd
+++ b/cv.qmd
@@ -102,6 +102,7 @@ cv:
   
 ## Teaching
 
+  - <a href="/teaching/sp25.qmd" style="text-decoration:none"> Spring 2025: MAC2311 Calculus and Analytic Geometry I</a> 
   - <a href="/teaching/sp24.qmd" style="text-decoration:none"> Spring 2024: MAP4170 Introduction to Actuarial Mathematics</a>  
   - <a href="/teaching/sp23.qmd" style="text-decoration:none"> Fall 2023: MAP4170 Introduction to Actuarial Mathematics</a>  
   - <a href="/teaching/fall23.qmd" style="text-decoration:none"> Spring 2023: MAC1140 PreCalculus Algebra</a>  
